1.3.0-alpha.4 - Added displaynames experimental config option.